update Dockerfile to use jlink minified jre